# python-project-50

./: .coverage  .gitignore  Makefile  README.md  a1.cast  a2.cast  a3.cast  a4.cast  coverage.xml  initialization.py  p.py  pyproject.toml  ruff.toml
.github/workflows/: Pyci.yml
gendiff/: __init__.py  data_load.py  gendiff_tree.py  logic_gendiff.py  parse_arg.py
gendiff/format/: select_formater.py  stylish.py
gendiff/scripts/: gendiff.py  generate_diff.py
tests/: test_gendif.py  test_json.py
tests/files/: file1.json  file2.json
tests/fixtures/: result_json.txt
tests/test_data/: test_gendif.py  test_plain.py
